2023-12-15 Jan Kotanski <jankotan@gmail.com>
	* add support for fetching metadata from multi-scan Nexus files (#542)
	* add --nexus-path option to nxsfileinfo attachment (#544)
	* skip scan if it is grouped twice  (#547)
	* tagged as v3.55.0

2023-12-13 Jan Kotanski <jankotan@gmail.com>
	* add support for unit and other attributes in FIOFileParser (#536)
	* add support for grouping subdirectories (#538)
	* tagged as v3.54.0

2023-11-28 Jan Kotanski <jankotan@gmail.com>
	* add --copy-map-error to nxsfileinfo metadata (#534)
	* add --group-map-error to nxsfileinfo metadata (#534)
	* tagged as v3.53.0

2023-11-23 Jan Kotanski <jankotan@gmail.com>
	* add --keywords to nxsfileinfo metadata (#529)
	* add --raw to nxsfileinfo groupmetadata (#529)
	* append_scicat_record helper comman to scdataset.py (#529)
	* fix typos in nxsfileinfo groupmetadata (#529)
	* merge lists in groupmetadata (#530)
	* tagged as v3.52.0

2023-11-21 Jan Kotanski <jankotan@gmail.com>
	* add nxsfileinfo groupmetadata subcommand (#526)
	* fix applying copymap (#526)
	* tagged as v3.51.0

2023-11-09 Jan Kotanski <jankotan@gmail.com>
	* update tests by changing tango.Device_4Impl to tango.LatestDeviceImpl (#524)
	* tagged as v3.50.2

2023-10-25 Jan Kotanski <jankotan@gmail.com>
	* fix order of secop meaning by highest importance (#519)
	* tagged as v3.50.1

2023-10-09 Jan Kotanski <jankotan@gmail.com>
	* add support for data filter list (#516)
	* tagged as v3.50.0

2023-09-08 Jan Kotanski <jankotan@gmail.com>
	* cure endTime and creationTime in nxsfileinfo metadata (#511)
	* fix nxsfileinfo attachment from fio with empty parameters (#513)
	* tagged as v3.49.0

2023-08-28 Jan Kotanski <jankotan@gmail.com>
	* update nxsfileinfo metadata and attachament for new nestjs scicat backend (#506, #508)
	* tagged as v3.48.0

2023-07-05 Jan Kotanski <jankotan@gmail.com>
	* fix names in defaultsignal and defaultaxes (#503)
	* add defaultattrs to axesnames (#503)
	* tagged as v3.47.2
