@@ -2,6 +2,7 @@
 	* add support for fetching metadata from multi-scan Nexus files (#542)
 	* add --nexus-path option to nxsfileinfo attachment (#544)
 	* skip scan if it is grouped twice  (#547)
+	* add support for SciCatAutoGrouping (#548)
 	* tagged as v3.55.0
 
 2023-12-13 Jan Kotanski <jankotan@gmail.com>
